0.4.0
* if you use WordPress + Jetpack (+markdown) and Prism, have I got an Rmd template for you

0.3.4.9000
* added TOC basic formattingin Bulma (and re-enabled TOC in general)

0.3.3.9000
* Skeleton template now matches Bulma in terms of YAML frontmatter support
* added YAML frontmatter documentation in template functions

0.3.2.9000
* basic template tests
* rmarkdown::render examples added to template functions

0.3.1.9000
* CRAN checks
* minor man pg tweaks

0.3.0.9000
* Kube CSS framework contributed by Kieran Healy
* Added template preview images to template function help pages

0.2.1.9000
* arbitrary footer content can be specified in the YAML header

0.2.0.9000
* `self_contained=FALSE` now copies the custom CSS
* Bulma `base.html` template fixed (navtitle/navlink weren't working)
* removed errant, duplicate `skeleton()` function

0.1.0.9000
* Initial release