@@ -19,10 +19,11 @@ pre[class*="language-"] {
 	word-break: normal;
 	word-wrap: normal;
 	line-height: 1.5;
+	margin-bottom: 1em;
 
-	-moz-tab-size: 4;
-	-o-tab-size: 4;
-	tab-size: 4;
+	-moz-tab-size: 2;
+	-o-tab-size: 2;
+	tab-size: 2;
 
 	-webkit-hyphens: none;
 	-moz-hyphens: none;
@@ -35,6 +36,7 @@ div[class*="language-"] > pre[class],
 pre[class*="language-"] {
 	padding: 1em;
 	margin: .5em 0;
+	margin-bottom: 1em;
 	overflow: auto;
 	border-radius: 0.3em;
 }
