@@ -1,5 +1,6 @@
 0.4.0
 * if you use WordPress + Jetpack (+markdown) and Prism, have I got an Rmd template for you
+* hrbrskel + hrbrmrkdn
 
 0.3.4.9000
 * added TOC basic formattingin Bulma (and re-enabled TOC in general)
